--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
   display: flex;
   align-items: center;
   background-color: #3f51b5;
-  height: 60px;
+  height: 55px;
   z-index: 1000;
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
 }
@@ -103,14 +103,17 @@ header h1  {
 
 .top_line {
   top: 10%;
+  transform: translate(100%, 100%);
 }
 
 .mid_line {
   top: 50%;
+  transform: translate(100%, 100%);
 }
 
 .bottom_line {
   bottom: 0;
+  transform: translate(100%, 100%);
 }
 
 /* Scroll Menu */
@@ -122,7 +125,7 @@ header h1  {
 nav {
   background-color: white;
   position: fixed;
-  top: 60px;
+  top: 55px;
   color: #000;
   width: 215px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -255,7 +258,7 @@ summary {
 }
 
 .sticky-header {
-  height: 60px;
+  height: 55px;
 }
 
 /* Container-1 */
@@ -367,14 +370,86 @@ a {
   background-color: white;
 }
 
+.box-23 {
+  border-radius: 2px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 1rem;
+  background-color: white;
+  padding: 1rem;
+  height: 450px;
+}
+
 #box-23 {
   position: relative;
-  height: 500px;
 }
 
 .box-231 {
   position: absolute;
   bottom: 0;
+}
+
+/* Activity-log */
+
+.data-activity {
+  display: flex;
+  align-items: center;
+  padding: 1rem 1rem 0;
+}
+
+.data-activity2 {
+  display: flex;
+  padding: 0 1rem;
+}
+
+.flex-log-1 {
+  padding-right: 1rem;
+}
+
+.flex-log-2 {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.3;
+}
+
+.data-log {
+  padding-bottom: 15px;
+}
+
+#time-log {
+  font-size: 12px;
+  color: grey;
+}
+
+.bullet-log {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.bullet {
+  background-color: #3f51b5;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.line {
+  background-color: #3f51b5;
+  width: 1px;
+  height: 50px;
+}
+
+.line-top {
+  background-color: #3f51b5;
+  width: 1px;
+  height: 1rem;
+}
+
+.line-bottom {
+  background-color: #000;
+  width: 1px;
+  height: 34px;
 }
 
 /* Table */
@@ -404,6 +479,7 @@ td {
 .small-header {
   display: none;
 }
+
 
 @media screen and (min-width: 1301px) {
   nav {
@@ -461,12 +537,17 @@ td {
   }
   
   .container-2 {
+    display: flex;
     flex-wrap: wrap;
     margin: 1em;
   }
   .container {
     margin-bottom: 5px;
     flex: 1 1 40%;
+  }
+
+  .box-table-2 {
+    min-width: 300px;
   }
 }
 
