--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
   padding: 0;
   background-color: #072196;
   width: 60px;
-  height: 60px;
+  height: 55px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,7 +55,8 @@ header h1  {
 }
 
 #search_customers {
-  padding: 10px;
+  padding: 12px;
+  width: 100%;
 }
 
 .logout {
@@ -102,18 +103,18 @@ header h1  {
 }
 
 .top_line {
-  top: 10%;
-  transform: translate(100%, 100%);
+  top: 30%;
+  transform: translate(-50% -50%);
 }
 
 .mid_line {
   top: 50%;
-  transform: translate(100%, 100%);
+  transform: translate(-50% -50%);
 }
 
 .bottom_line {
-  bottom: 0;
-  transform: translate(100%, 100%);
+  top: 70%;
+  transform: translate(-50% -50%);
 }
 
 /* Scroll Menu */
@@ -506,10 +507,6 @@ td {
     margin-right: 1rem;
   }
   
-  #search_customers {
-    padding: 5px;
-    width: 100%;
-  }
 
   /* .logout p {
     
