--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -26,7 +27,7 @@ header {
 
 .nav-icon {
   padding: 0;
-  background-color: #072196;
+  background-color: #303e9f;
   width: 60px;
   height: 55px;
   display: flex;
@@ -64,6 +65,7 @@ header h1  {
   gap: 7px;
 }
 
+
 #header {
   display: flex;
   justify-content: space-between;
@@ -73,7 +75,7 @@ header h1  {
 }
 
 .menu-header {
-  background-color: #072196;
+  background-color: #303e9f;
   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
   height: 100%;
   display: flex;
@@ -81,11 +83,13 @@ header h1  {
   align-items: center;
   margin-left: 0;
   padding-right: 10px;
+  width: 156px;
 }
 
-#menuBtn {
+
+#toggleButton {
   width: 20px;
-  height: 10px;
+  height: 20px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -94,6 +98,8 @@ header h1  {
   margin-right: 3em;
   cursor: pointer;
 }
+
+
 
 .common {
   position: absolute;
@@ -118,14 +124,16 @@ header h1  {
 }
 
 /* Scroll Menu */
-.navBar {
+.sidebar {
   display: block;
   box-sizing: border-box;
+  transition: width 0.3s;
+  overflow: hidden;
 }
 
 nav {
-  background-color: white;
   position: fixed;
+  background-color: white;
   top: 55px;
   color: #000;
   width: 215px;
@@ -161,34 +169,38 @@ nav li {
   align-items: center;
   column-gap: 20px;
   margin-top: 1rem;
-  margin-left: 5px;
+  margin-left: 2px;
   padding-bottom: 1rem;
   border-bottom: 1px solid;
   border-color: #eeeeee;
   font-size: 16px;
 }
 
+.user-profile {
+  color: #072196;
+  padding: 0;
+  line-height: 1.5;
+  align-self: center;
+}
+
 .user img {
-  height: 50px;
-  width: 50px;
+  height: 45px;
+  width: 45px;
   border-radius: 50%;
+  margin-left: 5px;
 }
 
 .user-id a {
   color: blue;
 }
 
-.user-id p {
+.user p {
   font-size: 14px;
-}
-
-.user-id {
-  line-height: 20px;
-  margin-top: 10px;
+  cursor: copy;
+  color: #000;
 }
 
 ul {
-  margin-top: 15px;
   list-style: none;
 }
 
@@ -197,7 +209,7 @@ li {
 }
 
 nav ul li a {
-  padding: 1em;
+  padding: 10px;
   display: block;
   text-decoration: none;
   color: black;
@@ -208,42 +220,128 @@ a:hover {
   background-color: #eeeeee;
 }
 
-summary:hover {
+.fa-nav:hover {
   background-color: #eeeeee;
 }
 
 summary {
-  padding: 12px;
+  padding: 10px;
   cursor: pointer;
   list-style: none;
   display: flex;
   justify-content: space-between;
 }
 
+.detail-name {
+  display: flex;
+  align-items: center;
+}
+
+.fa-nav .fa-nav-icon {
+  margin-right: 10px;
+}
+
+.fa-nav-icon {
+  padding: 7px;
+  fill: black;
+  width: 40;
+  height: 30;
+}
+
+.fa-nav .sidebar-text {
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
 .arrow {
-  width: 8px;
+  width: 5px;
   position: relative;
 }
 
 .top-arrow {
-  top: 5.5;
+  top: 41%;
   left: 0;
   height: 1px;
-  width: 8px;
+  width: 6px;
   position: absolute;
-  transform: rotate(145deg);
-  background-color: #272727;
+  transform: rotate(130deg);
+  background-color: #3d3d3d;
+  transform: 5s ease;
 }
 .bottom-arrow {
   height: 1px;
   left: 0;
-  width: 8px;
+  width: 6px;
   position: absolute;
-  transform: rotate(30deg);
-  background-color: #272727;
-  bottom: 5.5;
+  transform: rotate(40deg);
+  background-color: #3d3d3d;
+  bottom: 45%;
+  transform: 5s ease;
 }
 
+.user-details {
+  border-top: 5px solid #072196;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  margin-top: 10px;
+  margin-left: 5px;
+}
+
+.profile {
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 5px;
+  color: #000;
+  padding: 5px;
+}
+
+.menu-account {
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+details[open] .top-arrow {
+  transform: rotate(40deg);
+}
+
+details[open] .bottom-arrow {
+  top: 40%;
+  left: 4;
+  transform: rotate(140deg);
+}
+
+details[open] .fa-nav{
+  background-color: #eaeaea;
+}
+
+details[open] .icon-container {
+  background-color: rgb(112, 124, 136);
+  fill: #fff;
+}
+
+.collapsed .sidebar {
+  width: 0;
+}
+
+.collapsed .sidebar-text {
+  opacity: 0;
+  display: none;
+}
+
+.collapsed .arrow {
+  opacity: 0;
+  display: none;
+}
+
+.collapsed .watermark {
+  opacity: 0;
+  display: none;
+}
+
+.collapsed nav {
+  width: 60px;
+}
 
 /* Watermark */
 .watermark {
@@ -260,6 +358,17 @@ summary {
 
 .sticky-header {
   height: 55px;
+  margin-bottom: 1rem;
+}
+
+#container {
+  margin-left: 200px;
+  padding: 20px;
+  transition: margin-left 0.3s;
+}
+
+.collapsed #container {
+  margin-left: 60px;
 }
 
 /* Container-1 */
@@ -269,7 +378,6 @@ a {
 }
 
 .container-1 {
-  margin-top: 20px;
   margin-right: 1rem;
   display: flex;
   justify-content: center;
@@ -284,7 +392,6 @@ a {
   display: flex;
   flex-direction: column;
   min-width: 190px;
-  margin-bottom: 1.2rem;
   border-radius: 2px;
   box-shadow: 0 0 5px rgba(41, 41, 41, 0.1);
 }
@@ -292,7 +399,7 @@ a {
 .box-1 {
   background-color: #fff;
   padding: 1rem;
-  padding-top: 25px;
+  padding-top: 1rem;
   padding-bottom: 1rem;
   line-height: 2rem;
   display: flex;
@@ -339,6 +446,7 @@ a {
   display: flex;
   column-gap: 1rem;
   margin-right: 1rem;
+  margin-top: 0;
 }
 
 .container-2 h2 {
@@ -376,17 +484,10 @@ a {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   margin-bottom: 1rem;
   background-color: white;
-  padding: 1rem;
-  height: 450px;
-}
-
-#box-23 {
-  position: relative;
 }
 
 .box-231 {
-  position: absolute;
-  bottom: 0;
+  width: fit-content;
 }
 
 /* Activity-log */
@@ -473,8 +574,9 @@ td {
 }
 
 #container {
-  margin-left: 235px;
-  margin-right: 1rem;
+  margin-left: 215px;
+  margin-right: 0;
+  padding-top: 5px;
 }
 
 .small-header {
@@ -493,11 +595,6 @@ td {
     font-size: 14px;
   }
 
-  #menuBtn {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
   nav ul {
     margin-bottom: 40px;
   }
@@ -507,6 +604,9 @@ td {
     margin-right: 1rem;
   }
   
+  .sticky-header {
+    margin-bottom: 0;
+  }
 
   /* .logout p {
     
@@ -523,10 +623,15 @@ td {
   tbody {
     font-size: 12px;
   }
-  
+
+  .collapsed #container {
+    margin-left: 2px;
+  }
   
   .container-1 {
     flex-wrap: wrap;
+    margin-top: 0;
+    margin-bottom: 0;
   }
   
   .container-2 h2 {
@@ -536,16 +641,35 @@ td {
   .container-2 {
     display: flex;
     flex-wrap: wrap;
-    margin: 1em;
-  }
-  .container {
-    margin-bottom: 5px;
-    flex: 1 1 40%;
+    margin-right: 0;
+    padding-left: 0;
   }
 
   .box-table-2 {
-    min-width: 300px;
+    min-width: 200px;
+    margin-top: 1rem;
   }
+
+  .container {
+    padding-top: 0;
+    margin-bottom: 5px;
+    margin-left: 0;
+    flex: 1 1 40%;
+  }
+
+  .flex-log-1 {
+    padding-right: 5px;
+  }
+
+  #container {
+    padding: 1rem 10px 10px 230px;
+    margin: 0;
+  }
+
+  .collapsed  #container {
+    padding-left: 70px;
+  }
+
 }
 
 
@@ -554,9 +678,9 @@ td {
     display: block;
   }
 
-  #menuBtn {
-    margin-left: 1rem;
-    margin-right: 1rem;
+  #toggleButton {
+    margin: 1rem;
+    padding: 5px;
   }
 
   .menu-header {
@@ -576,15 +700,35 @@ td {
   .logout  {
     display: none;
   }
-  #container {
-    margin-left: 1rem;
-    flex: 1;
+
+  .collapsed nav {
+    display: none;
   }
-  /* .container-2 {
+
+  .collapsed #container {
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;
+  }
+
+  #container {
+    padding-left: 6px;
+    flex: 1;
+    margin-right: 6px;
+    padding-right: 6px;
+    width: 100%;
+    margin-left: 6px;
+    padding-bottom: 0;
+    padding-top: 1rem;
+  }
+  .container-2 {
     display: flex;
     flex-direction: column;
-    overflow-x: scroll;
-  } */
+  }
+
+  .box-21 {
+    width: 100%;
+  }
 
 }
 
