--- a/sub-menu.css
+++ b/sub-menu.css
@@ -3,7 +3,11 @@
   margin: 1em;
   border-radius: 5px;
   padding: 12px;
-  margin-left: 245px;
+  margin-left: 230px;
+}
+
+.collapsed .sub-menu {
+  margin-left: 75px;
 }
 
 .header {
@@ -30,6 +34,7 @@ input {
 .search-btn {
   display: flex;
   width: 100%;
+  
 }
 
 #username {
@@ -81,6 +86,7 @@ input {
   justify-content: center;
   align-items: center;
   text-align: center;
+  gap: 5px;
 }
 
 .table-section {
@@ -100,19 +106,34 @@ input {
   padding: 10px;
 }
 
-
-@media screen and (max-width: 900px) {
-  .sub-menu {
-    margin-left: 1em;
+@media screen and (max-width: 1300px) {
+  .collapsed .sub-menu {
+    margin-left: 75px;
   }
-  .form {
+}
+
+@media screen and (max-width: 600px) {
+  .sub-menu {
+      margin-left: 1em;
+    }
+    
+    .collapsed .sub-menu {
+      margin-left: 1rem;
+    }
+    .form {
+      flex-wrap: wrap;
+    }
+    .table-section {
+      overflow-x: scroll;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .input-btn {
     display: flex;
     flex-direction: column;
   }
-  .table-section {
-    overflow-x: scroll;
   }
-}
 
 
 
